ladminai-appointment/main/default/objects/Assigned_Resource__c/fields/Service_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment__c</fullName>
    <label>Service Appointment</label>
    <referenceTo>ServiceAppointment__c</referenceTo>
    <relationshipName>Assigned_ResourceS</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>