ladminai-appointment/main/default/objects/Assigned_Resource__c/fields/Service_Resource__c.field-meta.xml
<CustomField>
    <fullName>Service_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Resource</label>
    <referenceTo>Service_Resource__c</referenceTo>
    <relationshipName>Assigned_ResourceS</relationshipName>
    <type>Lookup</type>
</CustomField>